Sugati/src/objects/Supplier_Payment__c.object
<CustomObject>
    <fields>
        <fullName>P_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Supplier_Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBP_Supplier_Cost_Currency_Value__c</fullName>
        <label>Supplier Cost Currency Value</label>
        <referenceTo>Supplier_Cost_Payment__c</referenceTo>
        <relationshipLabel>Supplier_Payments</relationshipLabel>
        <relationshipName>Supplier_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SB_Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SP_Amount_in_GBP__c</fullName>
        <formula>IF( TEXT(  CurrencyIsoCode  ) = &quot;GBP&quot;,  P_Amount__c ,  P_Amount__c /   SP_Costing_ROE__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount in GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Authorised_by__c</fullName>
        <label>Authorised by</label>
        <picklist>
            <picklistValues>
                <fullName>Gustav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swapna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SP_Bank_Account__c</fullName>
        <label>Bank Account</label>
        <picklist>
            <picklistValues>
                <fullName>Account 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SP_Bank_Accounts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>Supplier_Payments (Bank Account)</relationshipLabel>
        <relationshipName>Supplier_Payments_Bank</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SP_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Supplier Payments</relationshipLabel>
        <relationshipName>Supplier_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SP_Comment__c</fullName>
        <description>Comment put in for Steve</description>
        <inlineHelpText>Supplier Comment</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SP_Costing_ROE__c</fullName>
        <formula>SBP_Supplier_Cost_Currency_Value__r.SCP_Exchange_Rate__r.ER_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costing ROE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FJD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HKD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SP_Due_Amount__c</fullName>
        <formula>P_Amount__c -  SP_Total_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SP_Exchange_Rate__c</fullName>
        <inlineHelpText>Payment RoE</inlineHelpText>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_FX_Gain_Loss__c</fullName>
        <formula>( P_Amount__c / SP_Costing_ROE__c) - (P_Amount__c / SP_Exchange_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FX Gain/Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Inv_Date__c</fullName>
        <label>Inv Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SP_Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SP_Opportunity__c</fullName>
        <formula>SBP_Supplier_Cost_Currency_Value__r.SCP_Opportunity__r.O_Reference_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Order__c</fullName>
        <formula>CASE(TEXT(SP_Type__c),
     &apos;Deposit&apos;, 1,
     &apos;Balance&apos;, 2,
     3
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Paid_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Paid By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SP_Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SP_Payment_From_Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment From Bank Account</label>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>Supplier_Payments</relationshipLabel>
        <relationshipName>Supplier_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SP_Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Bank Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FX Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SP_Payment_RoE__c</fullName>
        <label>Payment RoE</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Remittance_Comments__c</fullName>
        <label>Remittance Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SP_Remittance_Comments_office_copy__c</fullName>
        <label>Remittance Comments (office copy)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SP_Rev_Analysis_Code__c</fullName>
        <label>Rev Analysis Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SP_Supplier_Name__c</fullName>
        <formula>SBP_Supplier_Cost_Currency_Value__r.SCP_Supplier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Supplier_Payment_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Payment Rule</label>
        <referenceTo>Supplier_Payment_Rule__c</referenceTo>
        <relationshipLabel>Supplier_Payments</relationshipLabel>
        <relationshipName>Supplier_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SP_Supplier__c</fullName>
        <formula>SBP_Supplier_Cost_Currency_Value__r.SCP_Supplier__c</formula>
        <label>Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Total_Paid__c</fullName>
        <label>Total Paid</label>
        <summarizedField>Supplier_Payment_Transaction__c.SPT_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Supplier_Payment_Transaction__c.SPT_Our_Ref__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Supplier_Payment_Transaction__c.SPT_Supplier_Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SP_Transferred_To_Accts__c</fullName>
        <label>Transferred To Accts</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SP_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Supplier Payment</label>
    <nameField>
        <displayFormat>SP-{0000000000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier_Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>